# drfc-manager

./: .gitignore  LICENSE  README.md  example.env  pyproject.toml  requirements.txt  setup.py  training.ipynb
config/: README.md  drfc-deps.sh
config/scripts/: prepare-config.py
docker/: download-composes.sh  run.env  system.env
docs/: README.md  architecture-general.py
docs/pipelines/: README.md  start_training.md  stop_training.md
drfc_manager/: training_pipeline.py
drfc_manager/helpers/: files_manager.py  training_params.py
drfc_manager/transformers/: general.py  helpers.py  training.py
drfc_manager/types_built/: docker.py  model_metadata.py
drfc_manager/utils/commands/: docker_compose.py
drfc_manager/utils/minio/: server.py  utilities.py
modules/training/: local.py  minio.py
notebooks/: README.md  Training.ipynb  reward_function.py
pipelines/: README.md  main.py  training_pipeline.py
pipelines/helpers/: files_manager.py  training_params.py
pipelines/training/: docker_server.py  manager.py
pipelines/transformers/: general.py  training.py
pipelines/transformers/exceptions/: base.py
pipelines/types_built/: docker.py
pipelines/upload/: minio.py
pipelines/upload/exceptions/: file_upload_exception.py
pipelines/utils/commands/: docker_compose.py
pipelines/utils/docker/: server.py  utilities.py
pipelines/utils/minio/: minio.py  server.py  utilities.py
workflow/: training_workflow.py
workflow/training/: local.py  manager.py
workflow/upload/: minio.py
workflow/upload/types/: hyperparameters.py  model_metadata.py
